--- a/02 - preprocesado.ipynb
+++ b/02 - preprocesado.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOtwHFsQ3QkzMXWiPuj1Gf0",
+      "authorship_tag": "ABX9TyPWvnajl03fgQ3YlvA7CMSF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1647,6 +1647,42 @@
           },
           "metadata": {},
           "execution_count": 62
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Guardamos el DF final para trabajar en la tercera fase donde ejecutaremos el modelo."
+      ],
+      "metadata": {
+        "id": "cZVJ7GiwSYwq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_train.to_csv('dataFrame_final. csv')\n",
+        "df_train.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NZRduN33Rw-o",
+        "outputId": "5f064aa4-a03d-45ec-b43a-4e38dcbca2da"
+      },
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(692500, 4)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 64
         }
       ]
     }
